// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Message snapshot for error state matches 1`] = `
<div
  class="message message--error"
  data-testid="Message"
>
  <div
    class="message--iconContainer"
  >
    <span
      class="message--icon"
    >
      ☠
    </span>
  </div>
  <pre
    class="message--pre "
  >
    this is an error notification.
  </pre>
  <div
    class="message--buttonContainer"
  >
    <button
      class="button primary button--error"
      data-testid="Button"
      id="1234-abcd-error"
    >
      <b>
        ✖
      </b>
    </button>
  </div>
</div>
`;

exports[`Message snapshot for info state matches 1`] = `
<div
  class="message message--info"
  data-testid="Message"
>
  <div
    class="message--iconContainer"
  >
    <span
      class="message--icon"
    >
      ⚙
    </span>
  </div>
  <pre
    class="message--pre "
  >
    this is an info notification.
  </pre>
  <div
    class="message--buttonContainer"
  >
    <button
      class="button primary button--info"
      data-testid="Button"
      id="1234-abcd-info"
    >
      <b>
        ✖
      </b>
    </button>
  </div>
</div>
`;

exports[`Message snapshot for standard state matches 1`] = `
<div
  class="message message--standard"
  data-testid="Message"
>
  <div
    class="message--iconContainer"
  >
    <span
      class="message--icon"
    >
      ☛
    </span>
  </div>
  <pre
    class="message--pre "
  >
    this is an standard notification.
  </pre>
  <div
    class="message--buttonContainer"
  >
    <button
      class="button primary button--standard"
      data-testid="Button"
      id="1234-abcd-standard"
    >
      <b>
        ✖
      </b>
    </button>
  </div>
</div>
`;

exports[`Message snapshot for success state matches 1`] = `
<div
  class="message message--success"
  data-testid="Message"
>
  <div
    class="message--iconContainer"
  >
    <span
      class="message--icon"
    >
      ☺
    </span>
  </div>
  <pre
    class="message--pre "
  >
    this is an success notification.
  </pre>
  <div
    class="message--buttonContainer"
  >
    <button
      class="button primary button--success"
      data-testid="Button"
      id="1234-abcd-success"
    >
      <b>
        ✖
      </b>
    </button>
  </div>
</div>
`;

exports[`Message snapshot for warn state matches 1`] = `
<div
  class="message message--warn"
  data-testid="Message"
>
  <div
    class="message--iconContainer"
  >
    <span
      class="message--icon"
    >
      ☹
    </span>
  </div>
  <pre
    class="message--pre "
  >
    this is an warn notification.
  </pre>
  <div
    class="message--buttonContainer"
  >
    <button
      class="button primary button--warn"
      data-testid="Button"
      id="1234-abcd-warn"
    >
      <b>
        ✖
      </b>
    </button>
  </div>
</div>
`;

exports[`Notifications snapshot matches 1`] = `
<section
  data-testid="Notifications"
/>
`;
